@@ -1,3 +1,12 @@
+2009-11-30 Alexandru Csete <oz9aec at gmail.com>
+
+    * src/gtk-sat-module.c:
+    Include support for GtkEventList views.
+
+    * src/gtk-event-list.[ch]:
+    First functional version.
+
+
 2009-11-29 Alexandru Csete <oz9aec at gmail.com>
 
     * src/gtk-event-list.[ch]:
